V 1.0.9 Fixing Overflow on Media Services Page

--- a/static/diesmo5.css
+++ b/static/diesmo5.css
@@ -5,6 +5,7 @@
 
 body {
   color: #151515;
+  overflow-x: hidden;
 }
 
 /* .text-cormorant-garamond {
